--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ color:saddlebrown;
 }
 section{
     display:flex;
+    margin-bottom: 150px;
 }
 .half-width{
     width:50%;
@@ -29,4 +30,10 @@ section{
 .top-banner{
     background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
+}
+.dream-big{
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position:right;
+    padding-right: 20px;
 }
