--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ color:saddlebrown;
 }
 #full-stack-experience{
     border-left:7px solid;
-    border-image: linear-gradient(salmon,tomato) ;
+    border-image: linear-gradient(teal,tomato) ;
     border-image-slice:1;  
 }
 footer p {
